k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: angryduck
  labels:
    app.kubernetes.io/name: angryduck
