k8s/deployment-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angryduck-controller
  namespace: angryduck
  labels:
    app.kubernetes.io/name: angryduck
    app.kubernetes.io/component: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: angryduck
      app.kubernetes.io/component: controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: angryduck
        app.kubernetes.io/component: controller
    spec:
      serviceAccountName: angryduck-controller
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: controller
          image: ghcr.io/hatam-abolghasemi/angry-duck-controller:1.8.10
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: registry-creds
              mountPath: /etc/angryduck/registry-creds
              readOnly: true
            - name: rescue-token
              mountPath: /etc/angryduck/rescue-token
              readOnly: true
            - name: webhook-token
              mountPath: /etc/angryduck/webhook-token
              readOnly: true
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 150m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: registry-creds
          secret:
            secretName: registry-pull
            optional: true
        - name: rescue-token
          secret:
            secretName: angryduck-rescue-token
            optional: true
        - name: webhook-token
          secret:
            secretName: angryduck-webhook-token
            optional: true
