k8s/service-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: angryduck-worker
  namespace: angryduck
  labels:
    app.kubernetes.io/name: angryduck
    app.kubernetes.io/component: worker
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: angryduck
    app.kubernetes.io/component: worker
  ports:
    - name: http
      port: 18081
      targetPort: 18081
